# signaltest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  demo.yml
benchmark/: README.md  simulate.py
docs/: architecture.md
examples/: demo.py  flaky.py  tool_agent.py
examples/real_agent/: README.md  agent.py  paired_demo.py  test_quality.py
examples/regression/: test_regression_demo.py
examples/regression/baselines/: demo.json
src/signaltest/: __init__.py  cli.py  compare.py  config.py  history.py  plugin.py  report.py  results.py  runner.py  scaffold.py
src/signaltest/adapters/: __init__.py  deepeval.py  inspect.py
src/signaltest/baseline/: cache.py  record.py  store.py
src/signaltest/metrics/: base.py  contains.py  exact.py  judge.py  numeric.py  (+2 more)
tests/: test_adapters.py  test_api.py  test_async.py  test_baseline.py  test_boolean_significance.py  test_cache.py  test_ci_bar.py  test_cli.py  test_compare.py  test_config.py  test_correction.py  test_diff.py  test_e2e.py  test_effect_ci.py  test_gate.py  test_history.py  test_integration.py  test_interpret.py  test_judge.py  test_metrics.py  test_model.py  test_more_metrics.py  test_paired.py  test_parallel.py  test_plugin.py  test_power.py  test_rag.py  test_record.py  test_report.py  test_report_detail.py  test_reporter.py  test_runner.py  test_sequential.py  test_sequential_runner.py  test_significance.py  test_significance_test_choice.py  test_suite.py  test_trajectory.py  test_trajectory_metric.py  test_update.py  (+1 more)
(+9 files in other folders)
