[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signaltest"
version = "0.1.0.dev0"
description = "Flake-proof regression testing for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hatim" }]
dependencies = ["scipy>=1.11"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "coverage>=7.0", "pre-commit>=3.0"]

[project.scripts]
signaltest = "signaltest.cli:main"

[project.entry-points.pytest11]
signaltest = "signaltest.plugin"

[project.urls]
Homepage = "https://github.com/Falcon305/signaltest"

[tool.ruff]
line-length = 100

[tool.mypy]
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["signaltest"]

[tool.coverage.report]
show_missing = true
fail_under = 100
